# ssvepy

./: .gitignore  LICENSE.md  Makefile  README.md  api.html  example.html  example.ipynb  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
_modules/mne/: epochs.html
_modules/mne/channels/: channels.html
_modules/ssvepy/: ssvepyepochs.html
_sources/: api.rst.txt  example.ipynb.txt  index.rst.txt  installation.rst.txt
_sources/api/: index.rst.txt
_static/css/: custom.css
api/: ssvepy.load_ssvep.html
doc/: Makefile  conf.py  example.ipynb  index.rst
doc/_build/doctrees/: api.doctree  environment.pickle  example.doctree  index.doctree  installation.doctree
doc/_build/doctrees/api/: index.doctree  ssvepy.Ssvep.doctree  ssvepy.load_ssvep.doctree
doc/_build/html/: .buildinfo  api.html  example.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
doc/_build/html/_modules/: builtins.html  index.html
doc/_build/html/_modules/mne/: filter.html  utils.html
doc/_build/html/_modules/mne/io/: base.html  (+1 more)
doc/_build/html/_modules/ssvepy/: ssvepyepochs.html
doc/_build/html/api/: index.html  ssvepy.Ssvep.html
doc/_templates/autosummary/: class.rst
doc/api/: ssvepy.load_ssvep.rst
src/ssvepy/: __init__.py  exampledata.py  fit_spectrum.py  frequencymaths.py  ssvepyepochs.py
ssvepy/: __init__.py  dummydata.py  exampledata.py  frequencymaths.py  predictstates.py  ssvepyepochs.py
ssvepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
