[tool.poetry]
name = "ssvepy"
version = "0.3"
description = "A package that provides classes for SSVEP analysis."
authors = ["Jan Freyberg <jan.freyberg@gmail.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.5"
mne = "^0.17.1"
numpy = "^1.16"
matplotlib = "^3.0"
scikit-learn = "^0.20.3"
h5py = "^2.9"
xarray = "^0.12.1"


[tool.poetry.dev-dependencies]
rope = "^0.14.0"
jupyterlab = "^0.35.4"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
